# physical-ai-jetson-robotics-lab

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: README.md
arm_control/: README.md
docs/: ARCHITECTURE.md  BUSINESS_CASES.md  ENVIRONMENT_STRATEGY.md  FLAGSHIP_DIFFERENTIATORS.md  HARDWARE.md  JETSON_DEPLOYMENT.md  LEROBOT_ALOHA.md  LINUX_RTX_SETUP.md  MILESTONES.md  ROADMAP.md  RTX_SIMULATION_TRAINING.md  SIGNATURE_DEMOS.md  SYNRIA_ARM_PLAN.md  SYNRIA_UPSTREAM_TODO.md  WINDOWS_DEV.md  YAHBOOM_ROBOT_CAR_PLAN.md
docs/rosmaster_m3pro/: MILESTONE_1_DESCRIPTION.md
edge_ai/: README.md
isaac/: README.md
isaac/scripts/: import_synria_urdf.py  render_factory_cell.py
isaac/usd/: factory_cell_v0.usda
isaac/usd/robots/: README.md  rosmaster_m3pro.urdf  synria_6dof_arm.usda
isaac/usd/robots/meshes/Alicia_D_v5_6/follower_standard/: left_gripper_100mm.STL  left_gripper_50mm.STL  link3.STL  link4.STL  link4_100mm.STL  link5.STL  link6.STL  link6_100mm.STL  right_gripper_100mm.STL  (+1 more)
isaac/usd/robots/rosmaster_m3pro/: rosmaster_m3pro.usd
isaac/usd/robots/rosmaster_m3pro/configuration/: rosmaster_m3pro_base.usd  rosmaster_m3pro_physics.usd  rosmaster_m3pro_sensor.usd
isaac/usd/robots/synria_6dof_arm/: README.md  synria_6dof_arm.urdf  synria_6dof_arm.usd  synria_6dof_arm.usda
isaac/usd/robots/synria_6dof_arm/configuration/: synria_6dof_arm_physics.usd  synria_6dof_arm_robot.usd  synria_6dof_arm_sensor.usd
isaac/usd/robots/synria_6dof_arm/payloads/: base.usda  materials.usda  robot.usda
isaac/usd/robots/synria_6dof_arm/source_urdf/: synria_6dof_arm.urdf.xacro  synria_c10_camera.xacro
isaac/usd/robots/yahboom-rosmaster-m3-pro/: README.md  cad_convert_config.json  cad_convert_config_instanced.json  convert_cad_to_usd.sh
isaac/usd/robots/yahboom-rosmaster-m3-pro/source_urdf/: inertials.xacro  ros2_control.xacro  rosmaster_m3pro.urdf.xacro
physical_ai_lab/: __init__.py  cli.py  config.py  edge_ai.py  inventory.py  mission.py  ops_copilot.py  rtx_projects.py  rtx_training.py  slam.py  synria_upstream.py  telemetry.py
projects/jetson-edge-ai-security/: README.md  pyproject.toml
projects/jetson-edge-ai-security/configs/: default.yaml
projects/jetson-edge-ai-security/docs/: architecture.md  datasets.md  production-roadmap.md  traffic-source-api.md
projects/jetson-edge-ai-security/src/jetson_edge_ai_security/: __init__.py  cli.py  config.py  schemas.py
projects/jetson-edge-ai-security/src/jetson_edge_ai_security/alerts/: __init__.py  alert_builder.py
projects/jetson-edge-ai-security/src/jetson_edge_ai_security/datasets/: __init__.py  catalog.py  fetcher.py
projects/jetson-edge-ai-security/src/jetson_edge_ai_security/detection/: __init__.py  baseline.py  model_runner.py
projects/jetson-edge-ai-security/src/jetson_edge_ai_security/features/: __init__.py  extractors.py  windows.py
projects/jetson-edge-ai-security/src/jetson_edge_ai_security/forecasting/: __init__.py  attack_count.py
projects/jetson-edge-ai-security/src/jetson_edge_ai_security/runtime/: __init__.py  metrics.py  pipeline.py
projects/jetson-edge-ai-security/src/jetson_edge_ai_security/sources/: __init__.py  base.py  csv_replay.py  live_capture.py  mqtt_source.py  pcap_replay.py  suricata_source.py  zeek_source.py
projects/jetson-edge-ai-security/src/jetson_edge_ai_security/utils/: __init__.py  logging.py
projects/jetson-edge-ai-security/tests/: test_csv_replay_source.py  test_dataset_fetcher.py  test_feature_windows.py  test_pipeline_smoke.py  test_schemas.py
reports/: README.md  SIGNATURE_DEMO_TEMPLATE.md
reports/isaac/: 2026-05-14-linux-rtx-openusd-bringup.md  OPENUSD_TEMPLATE.md
reports/simulation/: ros_gazebo_factory_cell.json  synria_moveit_smoke.json
reports/synria/: BRINGUP_TEMPLATE.md
reports/training/: synria_reach_policy.json
reports/yahboom/: BRINGUP_TEMPLATE.md
ros2_ws/: README.md
ros2_ws/src/rosmaster_m3pro_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/rosmaster_m3pro_bringup/launch/: display.launch.py
ros2_ws/src/rosmaster_m3pro_control/: CMakeLists.txt  package.xml
ros2_ws/src/rosmaster_m3pro_control/config/: fake_controllers.yaml  real_controllers.yaml
ros2_ws/src/rosmaster_m3pro_description/: CMakeLists.txt  package.xml
ros2_ws/src/rosmaster_m3pro_description/launch/: display.launch.py
ros2_ws/src/rosmaster_m3pro_description/rviz/: display.rviz
ros2_ws/src/rosmaster_m3pro_description/urdf/: arm_6dof.xacro  common_geometry.xacro  materials.xacro  mecanum_base.xacro  sensors.xacro
ros2_ws/src/rosmaster_m3pro_hardware/: CMakeLists.txt  package.xml
ros2_ws/src/rosmaster_m3pro_hardware/config/: hardware_interface.yaml
ros2_ws/src/rosmaster_m3pro_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/rosmaster_m3pro_moveit_config/config/: joint_limits.yaml  rosmaster_m3pro.srdf
ros2_ws/src/rosmaster_m3pro_perception/: CMakeLists.txt  package.xml
ros2_ws/src/rosmaster_m3pro_perception/config/: sensor_frames.yaml
ros2_ws/src/rosmaster_m3pro_simulation/: CMakeLists.txt  package.xml
ros2_ws/src/rosmaster_m3pro_simulation/worlds/: empty.sdf
scripts/jetson/: check_device.sh  collect_inventory.sh
scripts/linux_rtx/: bootstrap.sh  check_nvidia_stack.sh  collect_inventory.sh  import_synria_urdf.sh  render_factory_cell.sh  run_ros_gazebo_factory_cell.sh  run_rtx_training_suite.sh  run_synria_moveit_smoke.sh
scripts/windows/: bootstrap.ps1  collect_inventory.ps1
slam/: README.md
tests/: test_config.py  test_edge_ai.py  test_mission.py  test_ops_copilot.py  test_rtx_projects.py  test_rtx_training.py  test_simulation_foundation.py  test_slam.py  test_synria_upstream.py  test_telemetry.py
(+4 files in other folders)
