[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physical-ai-jetson-robotics-lab"
version = "0.1.0"
description = "Physical AI lab for Jetson robotics, OpenUSD simulation, ROS 2 SLAM, edge AI, and sim-to-real deployment."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Obinna Edeh", email = "obiedeh@gmail.com"}
]
keywords = [
  "physical-ai",
  "robotics",
  "jetson",
  "isaac-sim",
  "openusd",
  "slam",
  "edge-ai",
  "sim-to-real",
  "ros2"
]
dependencies = [
  "numpy>=1.24",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10"
]
vision = [
  "opencv-python>=4.9"
]
ml = [
  "onnxruntime>=1.17",
  "scikit-learn>=1.4"
]

[project.scripts]
physical-ai-lab = "physical_ai_lab.cli:app"

[tool.setuptools.packages.find]
include = ["physical_ai_lab*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
