[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jetson-edge-ai-security"
version = "0.1.0"
description = "Production-oriented edge security telemetry runtime for defensive IDS replay, feature extraction, detection, and alerts."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.4"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
edge-security = "jetson_edge_ai_security.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["jetson_edge_ai_security*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

