<?xml version="1.0"?>
<package format="3">
  <name>rosmaster_m3pro_control</name>
  <version>0.1.0</version>
  <description>ros2_control controller configuration for the Yahboom ROSMASTER M3 Pro.</description>
  <maintainer email="oedeh@example.com">oedeh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>mecanum_drive_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
