<?xml version="1.0"?>
<package format="3">
  <name>rosmaster_m3pro_moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt 2 configuration scaffold for the ROSMASTER M3 Pro 6DOF arm.</description>
  <maintainer email="oedeh@example.com">oedeh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>rosmaster_m3pro_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
