<?xml version="1.0"?>
<package format="3">
  <name>rosmaster_m3pro_simulation</name>
  <version>0.1.0</version>
  <description>Gazebo Harmonic simulation assets for the Yahboom ROSMASTER M3 Pro.</description>
  <maintainer email="oedeh@example.com">oedeh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rosmaster_m3pro_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
